[project]
name = "nse-pytoolkit"
version = "0.1.0"
description = "Tools and types used throughout Night Sky Eternity projects"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nse_pytoolkit"]


[dependency-groups]
dev = ["pyright>=1.1.408", "ruff>=0.15.2"]
test = ["pytest>=9.0.2"]


[tool.pyright]
typeCheckingMode = "strict"
reportUnknownVariableType = false


[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "D", "PLR2004"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"test/*" = ["S101"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
